# flask_excel

./: README.md  pyproject.toml
src/flask_excel/: data.csv  service.py
tests/: test_flask_excel.py
