[tool.poetry]
name = "flask_excel"
version = "0.1.0"
description = ""
authors = ["jpsmithnl <jp.smith@mun.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.1"
flask = "^1.1"
flask_restful = "^0.3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
